# kpu2024-pleno-readability

./: .gitignore  README.md  model.py  processors.py  pyproject.toml  requirements.txt  run.py  run_hash.py
notebooks/: analysis.ipynb  arcuo.ipynb  blur.ipynb  eda-benford.ipynb  etl-summaries.ipynb  etl-tps.ipynb  etl-wilayah.ipynb  hash.ipynb  matching.ipynb  template.ipynb
play/: blur.py  matching.py
scripts/: analyze.py  scrape.py  split.py
