[project]
name = "sirekap-docs-reliability"
version = "0.1.0"
description = "Scraping and analysis of KPU 2024 website data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # numbers
    "numpy>=2.2.2",
    "statsmodels>=0.14.4",
    # data
    "pandas>=2.2.3",
    "scrapy>=2.12.0",
    "pyarrow>=19.0.0",
    # visualization
    "seaborn>=0.13.2",
    "matplotlib>=3.10.0",
    # image processing
    "scikit-image>=0.25.1",
    "opencv-python>=4.11.0.86",
    # utils
    "ruff>=0.9.4",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
    "ipykernel>=6.29.5",
]
